Finalize db config

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 <p>Created at: {{ node.created_at }}</p>
                 <div class="bio">
                     <h4>Summary</h4>
-                    <p>{{ node.Summary }}</p>
+                    <p>{{ node.summary }}</p>
                 </div>
             </div>
         {% endfor %}
