--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     <title>{% block title %} {% endblock %} - FlaskApp</title>
     <style>
         .title {
@@ -16,7 +17,7 @@
             flex-wrap: wrap;
         }
 
-        .student {
+        .node {
             flex: 20%;
             padding: 10px;
             margin: 5px;
@@ -47,8 +48,6 @@
 <body>
     <nav>
         <a href="{{ url_for('index') }}">FlaskApp</a>
-        <a href="#">Create</a>
-        <a href="#">About</a>
     </nav>
     <hr>
     <div class="content">
