--- a/templates/nodes.html
+++ b/templates/nodes.html
@@ -1,27 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <span class="title">
-        <h1>{% block title %} {{ node.node }} {% endblock %}</h1>
-    </span>
-    <div class="content">
-            <div class="node">
-                <p><b>#{{ node.id }}</b></p>
-                <b>
-                    <p class="name">{{ node.node }}</p>
-                </b>
-                <p>{{ node.prometheus }}</p>
-                <p>Record Created at: {{ node.created_at }}</p>
-                <div class="bio">
-                    <h4>Summary</h4>
-                    <p>{{ node.summary }}</p>
-                    <h4>History</h3>
-                    {% for record in node.histories %}
-                        <div class="comment">
-                            <p>Incidence time: {{ record.created_at }}</p>
-                        </div>
-                    {% endfor %}
+<span class="title">
+    <h1>{% block title %} {{ node.node }} {% endblock %}</h1>
+</span>
+<div class="content">
+    <div class="node">
+        <p><b>#{{ node.id }}</b></p>
+        <b>
+            <p class="name">{{ node.node }}</p>
+        </b>
+        <p>{{ node.prometheus }}</p>
+        <p>Record Created at: {{ node.creation_time }}</p>
+        <div class="bio">
+            <h4>Summary</h4>
+            <p>{{ node.summary }}</p>
+            <h4>History</h3>
+                {% for record in node.histories %}
+                <div class="comment">
+                    <p>Incidence time: {{ record.creation_time }}</p>
                 </div>
-            </div>
+                {% endfor %}
+        </div>
     </div>
+</div>
 {% endblock %}
