--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,21 @@
             border: none;
             border-radius: 10px
         }
+
+        .badge span {
+            background-color: #edf1fc;
+            height: 25px;
+            padding: 3px;
+            border-radius: 5px;
+            display: flex;
+            color: #4e73e5;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .h6 {
+            color: #B1BAC5;
+        }
     </style>
 </head>
 <body>
