--- a/templates/index.html
+++ b/templates/index.html
@@ -10,16 +10,13 @@
                 <div class="card p-3 mb-2">
                     <div class="d-flex justify-content-between">
                         <div class="d-flex flex-row align-items-center">
-                            <div class="mb-0">
+                            <div class="mb-0 text-wrap">
                                 <div class="mb-0">
-                                    <b>
-                                        <p class="h6">{{ node.node }}</p>
-                                    </b>
+                                    <a class="h5 btn btn-outline-danger" href="{{ url_for('nodes', node_id=node.id)}}">{{ node.node }}</a>
                                 </div>
                                 <div class="mb-0">
                                     <p class="h6">Not Ready Count: {{ node.count }}</p>
                                 </div>
-                                <a class="h3 btn btn-primary" href="{{ url_for('nodes', node_id=node.id)}}">Summary</a>
                             </div>
                         </div>
                     </div>
@@ -34,36 +31,41 @@
     <h2>Not Ready History</h2>
     <div class="container mt-5 mb-3">
         <div class="row">
-        {% for node in nodes %}
-        <div class="col-md-4">
-            <div class="card p-3 mb-2">
-                <div class="d-flex justify-content-between">
-                    <div class="d-flex flex-row align-items-center">
-                        <b>
-                            <p class="name">{{ node.node }}</p>
-                        </b>
-                        <p>{{ node.prometheus }}</p>
-                        <p>Not Ready Count: {{ node.count }}</p>
+            {% for node in nodes %}
+            <div class="col-md-4">
+                <div class="card p-3 mb-2">
+                    <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-row align-items-center">
+                            <div class="mb-0">
+                                <div class="mb-0">
+                                    <a class="h5 btn btn-outline-info" href="{{ url_for('nodes', node_id=node.id)}}">{{ node.node }}</a> 
+                                </div>
+                                <div class="badge"> <span>{{ node.prometheus }}</span> </div>
+                                <div class="mb-0">
+                                    <p class="h6">Not Ready Count: {{ node.count }}</p>
+                                </div>
+                                <div class="mb-0">
+                                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapse-{{node.id}}" aria-expanded="false" aria-controls="collapse-{{node.id}}">
+                                        history data
+                                    </button>
+                                </div>
+                                <div class="mb-0">
+                                    <div class="collapse" id="collapse-{{node.id}}">
+                                        <div class="card card-body">
+                                            <h4>Incidence time</h4>
+                                            {% for record in node.histories %}
+                                            <p class="h6">{{ record.creation_time }}</p>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            <!-- <div class="mb-0">
-                <p>
-                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                        history data
-                    </button>
-                </p>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
-                        <h4>Summary</h4>
-                        {% for record in node.histories %}
-                        <p>Incidence time: {{ record.creation_time }}</p>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div> -->
-        </div>
-        {% endfor %}
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
