--- a/templates/base.html
+++ b/templates/base.html
@@ -33,10 +33,20 @@
     </style>
 </head>
 <body>
-    <nav>
-        <a class="h1" href="{{ url_for('index') }}">FlaskApp</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand ml-2 mr-md-2" href="{{ url_for('index') }}">FlaskApp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+            </li>
+          </ul>
+        </div> -->
     </nav>
-    <hr>
     <div class="container">
         {% block content %} {% endblock %}
     </div>
