--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
             background-color: #eee
         }
         
+        .title {
+            margin: 5px;
+        }
+
         .card {
             border: none;
             border-radius: 10px
@@ -34,7 +38,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand ml-2 mr-md-2" href="{{ url_for('index') }}">FlaskApp</a>
+        <a class="title h1 navbar-brand" href="{{ url_for('index') }}">FlaskApp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
