--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
                                     <a class="h5 btn btn-outline-danger" href="{{ url_for('nodes', node_id=node.id)}}">{{ node.node }}</a>
                                 </div>
                                 <div class="mb-0">
-                                    <a class="badge p-0" href="{{ url_for('nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
+                                    <a class="badge p-0 text-decoration-none" href="{{ url_for('nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
                                 </div>
                                 <div class="mb-0">
                                     <p class="h6">Not Ready Count: {{ node.count }}</p>
@@ -44,7 +44,7 @@
                                     <a class="h5 btn btn-outline-info" href="{{ url_for('nodes', node_id=node.id)}}">{{ node.node }}</a> 
                                 </div>
                                 <div class="mb-0">
-                                    <a class="badge p-0" href="{{ url_for('nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
+                                    <a class="badge p-0 text-decoration-none" href="{{ url_for('nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
                                 </div>
                                 <div class="mb-0">
                                     <p class="h6">Not Ready Count: {{ node.count }}</p>
