--- a/templates/base.html
+++ b/templates/base.html
@@ -38,18 +38,10 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="title h1 navbar-brand" href="{{ url_for('index') }}">FlaskApp</a>
+        <a class="title h1 navbar-brand" href="{{ url_for('nodes.index') }}">FlaskApp</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
-        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-            </li>
-          </ul>
-        </div> -->
     </nav>
     <div class="container">
         {% block content %} {% endblock %}
