--- a/server/project/templates/nodes.html
+++ b/server/project/templates/nodes.html
@@ -15,7 +15,7 @@
             <h4>Summary</h4>
             <p>{{ node.summary }}</p>
             <h4>History</h3>
-                {% for record in node.histories %}
+                {% for record in node.records %}
                 <div class="h6">
                     <p>Incidence time: {{ record.creation_time }}</p>
                 </div>
