--- a/server/project/templates/index.html
+++ b/server/project/templates/index.html
@@ -10,18 +10,18 @@
                 <div class="card p-3 mb-2">
                     <div class="d-flex justify-content-between">
                         <div class="d-flex flex-row align-items-center">
-                            <div class="mb-0 text-wrap">
-                                <div class="mb-0">
+                            <div class="mb-0">
+                                <div class="mb-0 text-wrap">
                                     <a class="h5 btn btn-outline-danger" href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{ node.node }}</a>
                                 </div>
                                 <div class="mb-0">
-                                    <a class="badge p-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
+                                    <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span></a>
                                 </div>
                                 <div class="mb-0">
-                                    {% if node.reported == true %}
-                                        <a class="badge p-0 text-decoration-none" href="{{ url_for('nodes.reported', node_id=node.id)}}"><i class="bi bi-flag" style="font-size: 1rem; color: cornflowerblue;"></i></a>
+                                    {% if node.reported == false %}
+                                        <p class="h6">Reported: <span><a class="badge text-decoration-none" href="{{ url_for('nodes.reported', node_id=node.id)}}"><i class="bi bi-flag" style="font-size: 1rem; color: #4e73e5;"></i></a></span></p>
                                     {% else %}
-                                        <a class="badge p-0 text-decoration-none" href="{{ url_for('nodes.reported', node_id=node.id)}}"><i class="bi bi-flag-fill" style="font-size: 1rem; color: indianred;"></i></a>
+                                        <p class="h6">Reported: <span><a class="badge text-decoration-none" href="{{ url_for('nodes.reported', node_id=node.id)}}"><i class="bi bi-flag-fill" style="font-size: 1rem; color: indianred;"></i></a></span></p>
                                     {% endif %}
                                 </div>
                                 <div class="mb-0">
@@ -51,7 +51,14 @@
                                     <a class="h5 btn btn-outline-info" href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{ node.node }}</a> 
                                 </div>
                                 <div class="mb-0">
-                                    <a class="badge p-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
+                                    <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
+                                </div>
+                                <div class="mb-0">
+                                    {% if node.reported == false %}
+                                        <p class="h6">Reported: <span><a class="badge text-decoration-none" href="{{ url_for('nodes.reported', node_id=node.id)}}"><i class="bi bi-flag" style="font-size: 1rem; color: #4e73e5;"></i></a></span></p>
+                                    {% else %}
+                                        <p class="h6">Reported: <span><a class="badge text-decoration-none" href="{{ url_for('nodes.reported', node_id=node.id)}}"><i class="bi bi-flag-fill" style="font-size: 1rem; color: indianred;"></i></a></span></p>
+                                    {% endif %}
                                 </div>
                                 <div class="mb-0">
                                     <p class="h6">Not Ready Count: {{ node.count }}</p>
