--- a/server/project/templates/nodes.html
+++ b/server/project/templates/nodes.html
@@ -12,6 +12,14 @@
         <p>{{ node.prometheus }}</p>
         <p>Record Created at: {{ node.creation_time }}</p>
         <div class="h6">
+            <form action="{{ url_for('nodes.nodes', node_id=node.id) }}" method="post">
+                <div class="mb-3">
+                    <input autofocus class="form-control" type="text" name="comment" placeholder="Please Type Your Comment Here" required>
+                </div>
+                <div class="mb-3">
+                    <input class="btn btn-primary" type="submit" value="Comment">
+                </div>
+            </form>
             <h4>Summary</h4>
             <p>{{ node.summary }}</p>
             <h4>History</h3>
