You can add comment to node

--- a/server/project/templates/index.html
+++ b/server/project/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <h2>Current Not Ready Nodes</h2>
+    <h2 class="mt-3">Current Not Ready Nodes</h2>
     <div class="container mt-5 mb-3">
         <div class="row">
             {% for node in current_not_ready %}
