Added logic to get access to bmaas

--- a/server/project/templates/base.html
+++ b/server/project/templates/base.html
@@ -32,6 +32,10 @@
             align-items: center;
         }
 
+        .badge.danger span {
+            color: crimson;
+        }
+
         .h6 {
             color: #B1BAC5;
         }
