--- a/server/project/templates/index.html
+++ b/server/project/templates/index.html
@@ -15,7 +15,13 @@
                                     <a class="h5 btn btn-outline-danger" href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{ node.node }}</a>
                                 </div>
                                 <div class="mb-0">
-                                    <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span></a>
+                                    <p class="h6">Cluster: <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', cluster=node.prometheus)}}"> <span>{{ node.prometheus }}</span></a></p>
+                                </div>
+                                <div class="mb-0">
+                                    <p class="h6">Region: <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_region', region=node.region)}}"> <span>{{ node.region }}</span></a></p>
+                                </div>
+                                <div class="mb-0">
+                                    <p class="h6">Schedulable: <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_schedulable', schedulable=node.schedulable)}}"> <span>{{ node.schedulable }}</span></a></p>
                                 </div>
                                 <div class="mb-0">
                                     {% if node.reported == false %}
@@ -51,7 +57,7 @@
                                     <a class="h5 btn btn-outline-info" href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{ node.node }}</a> 
                                 </div>
                                 <div class="mb-0">
-                                    <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', prometheus_region=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
+                                    <a class="badge ps-0 text-decoration-none" href="{{ url_for('nodes.nodes_by_prometheus', cluster=node.prometheus)}}"> <span>{{ node.prometheus }}</span> </a>
                                 </div>
                                 <div class="mb-0">
                                     {% if node.reported == false %}
