--- a/server/project/templates/base.html
+++ b/server/project/templates/base.html
@@ -43,12 +43,15 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="title h1 navbar-brand" href="{{ url_for('nodes.index') }}">FlaskApp</a>
+        <a class="ms-3 title h1 navbar-brand" href="{{ url_for('nodes.index') }}">CaaS Node Log</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
     <div class="container">
+        <div class="mt-3">
+            <a class="btn btn-info" type="button" href="{{ url_for('nodes.refresh') }}">Refresh</a>
+        </div>
         {% block content %} {% endblock %}
     </div>
 </body>
