--- a/server/project/templates/index.html
+++ b/server/project/templates/index.html
@@ -9,8 +9,8 @@
             <div class="col-md-4">
                 <div class="card p-3 mb-2">
                     <div class="mb-0">
-                        <div class="mb-0 text-wrap">
-                            <a class="btn btn-outline-danger text-wrap"
+                        <div class="mb-0">
+                            <a class="btn btn-outline-danger"
                                 href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{ node.node }}</a>
                         </div>
                         <div class="mb-0">
@@ -58,12 +58,12 @@
             {% for node in nodes %}
             <div class="col-md-4">
                 <div class="card p-3 mb-2">
-                    <div class="mt-5">
+                    <div class="mt-0">
                         <div class="mb-0">
                             <div class="mb-0">
-                                <button class="h5 btn btn-outline-info"
+                                <a class="h5 btn btn-outline-info"
                                     href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{
-                                    node.node }}</button>
+                                    node.node }}</a>
                             </div>
                             <div class="mb-0">
                                 <a class="badge ps-0 text-decoration-none"
