--- a/server/project/templates/nodes.html
+++ b/server/project/templates/nodes.html
@@ -20,10 +20,10 @@
                     <input class="btn btn-primary" type="submit" value="Summary">
                 </div>
             </form>
-            {% if node.schedulable == false %}
+            {% if node.schedulable == false and node.current_not_ready == false %}
                 <p class="h6"><span><a class="badge text-decoration-none" href="{{ bmaas_id }}""><span>{{ bmaas_id }}</span></a></span></p>
             {% else %}
-                <p class="h6"><span><a class="badge text-decoration-none" href="#"><span>Method not allowed, please drain the node first.</span></a></span></p>
+                <p class="h6"><span><a class="badge text-decoration-none" href="#"><span>Method not allowed</span></a></span></p>
             {% endif %}            
             <h4>Summary</h4>
             <p>{{ node.summary }}</p>
