--- a/server/project/templates/index.html
+++ b/server/project/templates/index.html
@@ -9,8 +9,8 @@
             <div class="col-md-4">
                 <div class="card p-3 mb-2">
                     <div class="mb-0">
-                        <div class="mb-0">
-                            <a class="btn btn-outline-danger"
+                        <div class="mb-0 card">
+                            <a class="btn btn-outline-danger text-wrap"
                                 href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{ node.node }}</a>
                         </div>
                         <div class="mb-0">
@@ -60,8 +60,8 @@
                 <div class="card p-3 mb-2">
                     <div class="mt-0">
                         <div class="mb-0">
-                            <div class="mb-0">
-                                <a class="h5 btn btn-outline-info"
+                            <div class="mb-0 card">
+                                <a class="h5 btn btn-outline-info text-wrap"
                                     href="{{ url_for('nodes.nodes', node_id=node.id)}}">{{
                                     node.node }}</a>
                             </div>
