--- a/server/project/templates/base.html
+++ b/server/project/templates/base.html
@@ -43,14 +43,24 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="ms-3 title h1 navbar-brand" href="{{ url_for('nodes.index') }}">CaaS Node Log</a>
+        <a class="ms-3 title h1 navbar-brand" href="#">CaaS Node Log</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% for item in navbar %}
+                <li class="nav-item">
+                  <a class="nav-link {{ item['active'] }}" href="{{ item['url'] }}">{{ item["text"] }}</a>
+                </li>
+            {% endfor %}
+            </ul>
+          </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
+
     <div class="container">
         <div class="mt-3">
-            <a class="btn btn-info" type="button" href="{{ url_for('nodes.refresh') }}">Refresh</a>
+            <a class="btn btn-info" type="button" href="{{ url_for('nodes.refresh', env=env) }}">Refresh</a>
         </div>
         {% block content %} {% endblock %}
     </div>
