--- a/server/project/templates/nodes.html
+++ b/server/project/templates/nodes.html
@@ -4,6 +4,17 @@
 <span class="title">
     <h1>{% block title %} Node Info Detail {% endblock %}</h1>
 </span>
+<div class="mt-3">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-warning" role="alert">
+        {{ message }}
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+</div>
 <div class="container mt-5 mb-3">
     <div class="card p-3 mb-2">
         <b>
@@ -14,23 +25,30 @@
         <div class="h6">
             <form action="{{ url_for('nodes.summary', node_id=node.id) }}" method="post">
                 <div class="mb-3">
-                    <input autofocus class="form-control" type="text" name="summary" placeholder="Please Type Your Comment Here" required>
+                    <input autofocus class="form-control" type="text" name="summary"
+                        placeholder="Please Type Your Comment Here" required>
                 </div>
                 <div class="mb-3">
                     <input class="btn btn-primary" type="submit" value="Summary">
                 </div>
             </form>
             {% if node.schedulable == false and node.current_not_ready == true %}
-                <p class="h6"><span><a class="badge text-decoration-none" href="{{ bmaas_id }}""><span>{{ bmaas_id }}</span></a></span></p>
+                <p class="h6"><a class="ps-0 pe-0 badge text-decoration-none" href="{{ bmaas_url }}""><span>{{ bmaas_url }}</span></a></p>
+                <form action="{{ url_for('nodes.restart', node_id=node.id, bmaas_id=bmaas_id) }}" method="GET"
+                    onsubmit="return confirm('Are you sure you wish to restart node {{ bmaas_id }} ?');">
+                    <button class="btn btn-danger" type="submit">Restart</button>
+                </form>
             {% else %}
-                <p class="h6"><span><a class="badge text-decoration-none" href="#"><span>Method not allowed</span></a></span></p>
-            {% endif %}            
-            <h4>Summary</h4>
+                <p class=" h6"><a class="badge text-decoration-none" href="#"><span>Method not allowed</span></a></p>
+            {% endif %}
+            <h4 class="mt-3">Summary</h4>
             <p>{{ node.summary }}</p>
-            <h4>History</h3>
+            <h4>History</h4>
                 {% for record in node.records %}
                 <div class="h6">
-                    <p>Incidence time: {{ record.creation_time }}<span><a class="badge p-1 text-decoration-none danger" href="{{ url_for('nodes.delete', node_id=node.id, record_id=record.id) }}"> <span>Delete</span> </a></span></p>
+                    <p>Incidence time: {{ record.creation_time }}<a class="badge p-1 text-decoration-none danger"
+                                href="{{ url_for('nodes.delete', node_id=node.id, record_id=record.id) }}">
+                                <span>Delete</span></a></p>
                 </div>
                 {% endfor %}
         </div>
