--- a/server/project/templates/nodes.html
+++ b/server/project/templates/nodes.html
@@ -39,18 +39,18 @@
                     <button class="btn btn-danger" type="submit">Restart</button>
                 </form>
             {% else %}
-                <p class=" h6"><a class="badge text-decoration-none" href="#"><span>Method not allowed</span></a></p>
+                <p class="h6"><a class="ps-0 pe-0 badge text-decoration-none" href="#"><span>Method not allowed</span></a></p>
             {% endif %}
             <h4 class="mt-3">Summary</h4>
             <p>{{ node.summary }}</p>
             <h4>History</h4>
-                {% for record in node.records %}
-                <div class="h6">
-                    <p>Incidence time: {{ record.creation_time }}<a class="badge p-1 text-decoration-none danger"
-                                href="{{ url_for('nodes.delete', node_id=node.id, record_id=record.id) }}">
-                                <span>Delete</span></a></p>
-                </div>
-                {% endfor %}
+            {% for record in node.records %}
+            <div class="h6">
+                <p>Incidence time: {{ record.creation_time }}<a class="badge p-1 text-decoration-none danger"
+                        href="{{ url_for('nodes.delete', node_id=node.id, record_id=record.id) }}">
+                        <span>Delete</span></a></p>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
