--- a/server/project/templates/index.html
+++ b/server/project/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
+<div class="mt-3">
     <h2 class="mt-3">Current Not Ready Nodes</h2>
     <div class="container mt-5 mb-3">
         <div class="row">
