--- a/server/project/templates/base.html
+++ b/server/project/templates/base.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="ms-3 title h1 navbar-brand" href="#">CaaS Node Log</a>
+        <a class="ms-3 title h1 navbar-brand" href="/">CaaS Node Log</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% for item in navbar %}
@@ -59,9 +59,9 @@
     </nav>
 
     <div class="container">
-        <div class="mt-3">
-            <a class="btn btn-info" type="button" href="{{ url_for('nodes.refresh', env=env) }}">Refresh</a>
-        </div>
+        <form method="get" action="/refresh">
+            <input class="mt-3 btn btn-info" type="submit" value="Refresh" name="refresh"/>
+        </form>
         {% block content %} {% endblock %}
     </div>
 </body>
