--- a/server/project/templates/nodes.html
+++ b/server/project/templates/nodes.html
@@ -32,14 +32,17 @@
                     <input class="btn btn-primary" type="submit" value="Summary">
                 </div>
             </form>
-            {% if node.schedulable == false and node.current_not_ready == true %}
+            {% if node.schedulable == false and node.current_not_ready == true and node.env == 'qa' %}
                 <p class="h6"><a class="ps-0 pe-0 badge text-decoration-none" href="{{ bmaas_url }}""><span>{{ bmaas_url }}</span></a></p>
                 <form action="{{ url_for('nodes.restart', node_id=node.id, bmaas_id=bmaas_id) }}" method="GET"
                     onsubmit="return confirm('Are you sure you wish to restart node {{ bmaas_id }} ?\nNode name: {{ node.node }}\nRegion: {{ node.region }}');">
                     <button class="btn btn-danger" type="submit">Restart</button>
                 </form>
+            {% elif node.schedulable == false and node.current_not_ready == true %}
+                <p class="h6"><a class="ps-0 pe-0 badge text-decoration-none" href="{{ bmaas_url }}""><span>{{ bmaas_url }}</span></a></p>
+                <p class="h6"><a class="ps-0 pe-0 badge text-decoration-none danger" href="#"><span>PROD action not allowed</span></a></p>
             {% else %}
-                <p class="h6"><a class="ps-0 pe-0 badge text-decoration-none" href="#"><span>Method not allowed</span></a></p>
+                <p class="h6"><a class="ps-0 pe-0 badge text-decoration-none danger" href="#"><span>Method not allowed, node should be not ready and unchedulable</span></a></p>
             {% endif %}
             <h4 class="mt-3">Summary</h4>
             <p>{{ node.summary }}</p>
